--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -1,6 +1,6 @@
 <!-- Contact -->
 <div class="mb4">
-  <h4 class="f3 b lh-title mb3 tc">Get in touch.</h4>
+  <h4 class="f3 b lh-title mb3 tc">Any questions? Get in touch.</h4>
 
   <form action="">
     <div class="flex-l mhn1-l">
