--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,3 +1,4 @@
+
 <nav data-nav class="flex justify-between items-center center bg-black divider-grey relative overflow-x-visible">
 
 	<!-- Logo -->
@@ -44,3 +45,4 @@
 	</ul>
 
 </nav>
+<div class="top pv2 bg-black"></div>
