--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -11,6 +11,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <base href="{{ $.Site.BaseURL }}">
+  <link rel="stylesheet" href="/css/perfundo.with-icons.css">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +24,15 @@
 	<link rel="manifest" href="/manifest.json">
 	<link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#ff4400">
 	<meta name="theme-color" content="#fff">
+
+  <style type="text/css">
+    .top {
+      background: black url("/img/script-top.png") repeat-x center;
+    }
+    .bottom {
+      background: white url("/img/script-bottom.png") repeat-x center;
+    }
+  </style>
 
   <!-- Open Graph Hugo https://gohugo.io/templates/internal/#open-graph -->
   {{ template "_internal/opengraph.html" . }}
