--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,35 +1,7 @@
-{{ if .imageURL }}
-
-<div class="bg-black w-100">
-  <div class="pv5 pv6-l ph3 bg-center center cover mw7" style="background-image: url('{{.imageUrl}}')">
-    <div class="mt5 pv3 mw7 center ph3">
-      <div class="db mb3">
-        <!-- <div class="mw7 relative bg-fix-primary mb3">
-          <h1 class="f2 f1-l b di lh-title mb3 white mw6">
-            {{.title}}
-          </h1>
-        </div> -->
-        <div class="mw7 relative bg-fix-primary">
-          {{ if .subtitle }}
-          <p class="b f4 di lh-title mb3 white mw6">
-            {{.subtitle}}
-          </p>
-          {{ end }}
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-{{ else }}
-
-
-<div class="bg-black w-100">
-  <div class="image-container bg-center center cover">
+<div class="bg-primary w-100" style="background-image: radial-gradient(var(--primary), #205c77);">
+  <div class="image-container bg-center center cover mw7">
     {{ range $index, $e := .slideshow}}
       <img src="{{.Permalink}}{{.image}}" class="br0 center cover" />
     {{ end }}
     </div>
 </div>
-
-{{ end }}
