--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -3,7 +3,7 @@
 
 	<!-- Logo -->
 	<a href="/" class="pa3 db mr4 h-100 mw5 flex-none">
-		<img src="/img/logo-white.svg" alt="MENATMA logo" class="br0 db mb0 w-100"/>
+		<img src="/img/logo-white.png" alt="MENATMA logo" class="br0 db mb0 w-100" style="max-width:220px;"/>
 	</a>
 
 	<!-- Primary Nav -->
