--- a/site/layouts/partials/news.html
+++ b/site/layouts/partials/news.html
@@ -4,8 +4,8 @@
 		<h2 class="f2 b lh-title mb3">Latest news</h2>
 
 		<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
-			{{ range first 3 (where .Site.Pages "Type" "news") }}
-				{{ if ne .Title "News"}}
+			{{ range first 3 (where .Site.Pages "Type" "announcements") }}
+				{{ if ne .Title "Announcement"}}
 				<div class="ph1-ns w-100-ns flex">
 					{{ .Render "li" }}
 				</div>
@@ -14,7 +14,7 @@
 		</div>
 
 		<div class="tc">
-			<a href="/news" class="btn raise">Read more</a>
+			<a href="/announcements" class="btn raise">Read more</a>
 		</div>
 
 	</div>
