--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -19,6 +19,7 @@
 
 		{{ $currentPage := . }}
             {{ range .Site.Menus.primary }}
+              {{ if ne .Name "Grants"}}
                 {{ if .HasChildren }}
                     <li class="{{ if $currentPage.HasMenuCurrent "primary" . }}active{{ end }}">
                         <a href="{{ .URL }}">
@@ -41,6 +42,7 @@
                         </a>
                     </li>
                 {{ end }}
+              {{ end }}
             {{ end }}
 	</ul>
 
