removed history slideshow

--- a/site/layouts/section/about.html
+++ b/site/layouts/section/about.html
@@ -73,11 +73,11 @@
     </div>
   {{ end }}
 
-  {{ if .Params.photos }}
+  <!-- {{ if .Params.photos }}
     <div class="mw7 center pt3">
         {{ partial "gallery" (dict "photos" .Params.photos "pageUrl" .Permalink "galleryID" "1") }}
     </div>
-  {{ end }}
+  {{ end }} -->
 
   
 
