--- a/site/layouts/convenings/single.html
+++ b/site/layouts/convenings/single.html
@@ -9,9 +9,9 @@
     <div class="cms mw6">
       <p class="i">{{ .Description }}</p>
       {{ if .Params.image }}
-        <img src="{{ .Params.image }}" alt="{{ $.Title }}" class="br0" />
+        <!-- <img src="{{ .Params.image }}" alt="{{ $.Title }}" class="br0" /> -->
+        {{ with .Resources.Get .Params.image }}<img src="{{ .RelPermalink }}" class="br0" alt="{{ $.Title }}" />{{ end }}
       {{ end }}
-      <!-- {{ with .Resources.Get .Params.image }}<img src="{{ .RelPermalink }}" alt="{{ $.Title }}" />{{ end }} -->
       {{ .Content }}
     </div>
   </div>
