--- a/src/css/imports/_styles.scss
+++ b/src/css/imports/_styles.scss
@@ -195,6 +195,24 @@ footer a:hover {
   }
 }
 
+
+.fade-in {
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 1s;
+}
+
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @media (--breakpoint-large) {
   .image-container {
     height: 20rem;
