--- a/src/css/imports/_buttons.scss
+++ b/src/css/imports/_buttons.scss
@@ -9,7 +9,7 @@
   font-weight: var(--bold-font-weight);
   color: var(--primary);
   text-align: center;
-  box-shadow: inset 0 -2px 0 0 var(--primary);
+  box-shadow: inset 0 -2px 0 0 var(--offwhite);
   transition: var(--hover-transition);
 }
 
