--- a/src/css/imports/_colors.scss
+++ b/src/css/imports/_colors.scss
@@ -40,6 +40,10 @@
   background-color: var(--primary);
 }
 
+.bg-secondary {
+  background-color: var(--secondary);
+}
+
 .bg-highlight {
   background-color: var(--highlight);
 }
